--- a/package.json
+++ b/package.json
@@ -18,13 +18,19 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@mui/x-date-pickers": "^7.23.3",
     "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
     "luxon": "^3.5.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
+    "react-date-picker": "^11.0.0",
     "react-dom": "^18.3.1",
+    "react-time-picker": "^7.0.0",
     "sass": "^1.81.0"
   },
   "devDependencies": {
